# Federated_Learning

./: .gitignore  FedAvg_with_Gaussian.ipynb  GA.ipynb  GA_algo.ipynb  README.md  Results.xlsx  local_weights_single_client.json
colab/: Data_Center_Learning.ipynb  FedAvg.ipynb  FedAvg_with_Gaussian.ipynb  requirements.txt
python/vanilla-fl/: pyproject.toml
python/vanilla-fl/bash/: run_baseline.sh  run_federated.sh
python/vanilla-fl/data/: explore_mnist.py  mnist.py
python/vanilla-fl/src/: baseline.py  federated.py  models.py  utils.py  vector_conversions.py
