[tool.poetry]
name = "vanilla-fl"
version = "0.1.0"
description = ""
authors = ["roan <rohaan.nadeem2614@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.22.0"
tensorflow = "^2.16.1"
tqdm = "^4.66.4"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
